[SYNCOPE-938] Replacing commons-codec features with standard JDK counterparts